--- a/_mixins.scss
+++ b/_mixins.scss
@@ -1,15 +1,47 @@
-@import "mixins/alert.scss";
-@import "mixins/badges.scss";
-@import "mixins/background-variant.scss";
-@import "mixins/buttons.scss";
-@import "mixins/forms.scss";
-@import "mixins/icon.scss";
-@import "mixins/modals.scss";
-@import "mixins/popovers.scss";
-@import "mixins/page-header.scss";
-@import "mixins/vendor-prefixes.scss";
-@import "mixins/opacity.scss";
-@import "mixins/modals.scss";
-@import "mixins/inputs.scss";
-@import "mixins/dropdown.scss";
-@import "mixins/wizard.scss";
+// Toggles
+//
+// Used in conjunction with global variables to enable certain theme features.
+
+// Vendor
+@import "vendor/rfs";
+
+// Deprecate
+@import "mixins/deprecate";
+
+// Utilities
+@import "mixins/breakpoints";
+@import "mixins/hover";
+@import "mixins/image";
+@import "mixins/badge";
+@import "mixins/resize";
+@import "mixins/screen-reader";
+@import "mixins/size";
+@import "mixins/reset-text";
+@import "mixins/text-emphasis";
+@import "mixins/text-hide";
+@import "mixins/text-truncate";
+@import "mixins/visibility";
+
+// // Components
+@import "mixins/alert";
+@import "mixins/buttons";
+@import "mixins/caret";
+@import "mixins/pagination";
+@import "mixins/lists";
+@import "mixins/list-group";
+@import "mixins/nav-divider";
+@import "mixins/forms";
+@import "mixins/table-row";
+
+// // Skins
+@import "mixins/background-variant";
+@import "mixins/border-radius";
+@import "mixins/box-shadow";
+@import "mixins/gradients";
+@import "mixins/transition";
+
+// // Layout
+@import "mixins/clearfix";
+@import "mixins/grid-framework";
+@import "mixins/grid";
+@import "mixins/float";
