--- a/_navbar.scss
+++ b/_navbar.scss
@@ -1,413 +1,294 @@
+// Contents
+//
+// Navbar
+// Navbar brand
+// Navbar nav
+// Navbar text
+// Navbar divider
+// Responsive navbar
+// Navbar position
+// Navbar themes
+
+
+// Navbar
+//
+// Provide a static navbar from which we expand to create full-width, fixed, and
+// other navbar variations.
+
 .navbar {
-  padding: 10px 30px 10px 15px;
-  width: 100%;
-  z-index: 1050;
-  background: $navbar-color;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap; // allow us to do the line break for collapsing content
+  align-items: center;
+  justify-content: space-between; // space out brand from logo
+  padding: $navbar-padding-y $navbar-padding-x;
 
-  .photo {
-    display: inline-block;
-    height: 30px;
-    width: 30px;
-    border-radius: 50%;
-    vertical-align: middle;
-    overflow: hidden;
-      img{
-        width: 100%;
-      }
-  }
-
-  .navbar-wrapper {
+  // Because flex properties aren't inherited, we need to redeclare these first
+  // few properties so that content nested within behave properly.
+  > .container,
+  > .container-fluid {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
-  }
-
-  .navbar-text {
-    color: $white;
-  }
-
-  .btn{
-    margin: 0 5px 0 10px;
-  }
-
-  &.navbar-absolute{
-    position: absolute;
-    z-index: 1050;
-  }
-
-
-  &.navbar-transparent{
-    background: transparent !important;
-  }
-
-  &.bg-white{
-    .navbar-nav{
-      .search-bar.input-group{
-        i{
-          color: $black;
-        }
-      }
-
-      .search-bar.input-group .form-control{
-        background: rgba($black,0.1);
-        border-radius: 4px;
-      }
-
-      a.nav-link{
-        color: $black !important;
-        p{
-          color: $black;
-        }
-      }
-
-    }
-
-    .navbar-text, .navbar-brand{
-      color: $black;
-    }
-
-    .form-control {
-      color: $black !important;
-    }
-
-    .form-control::placeholder {
-      color: $dark-gray !important;
-    }
-
-  }
-
-  &.bg-dark {
-    background: $black !important;
-  }
-
-  &.bg-primary {
-    background-color: $primary !important;
-  }
-
-  &.bg-warning {
-    background-color: $warning !important;
-  }
-
-  &.bg-info {
-    background-color: $info !important;
-  }
-
-  &.bg-success {
-    background-color: darken($success, 10%) !important;
-  }
-
-  &.bg-danger {
-    background-color: $danger !important;
-  }
-
-  .navbar-brand {
-    position: fixed;
-    padding-top: .3125rem;
-    padding-bottom: .3125rem;
-    color: $white;
-    margin-left: 17px;
-    margin-top: 3px;
-    text-transform: uppercase;
-    font-size: $font-paragraph;
-  }
-
-  .navbar-toggle button:focus, .navbar-toggler{
-    outline: none;
-  }
-
-}
-
-.navbar-minimize-fixed {
-	position: fixed;
-  margin-left: 40px;
-  margin-top: 14px;
-	transition: 0.3s ease;
-	color: white;
-	z-index: 20;
-	opacity: 0;
-	transition: 0.2s ease;
-	button{
-		i {
-			font-size: 20px;
-		}
-	}
-}
-
-.notification {
-  background: $danger;
-	color: $white;
-	border-radius: $border-radius-xl;
-	height: 6px;
-	width: 6px;
-	position: absolute;
-	text-align: center;
-	font-size: 12px;
-	font-weight: 800;
-  top: 10px;
-  right: 10px;
-	border: 1px solid $danger;
-}
-
-.navbar-nav li{
-  padding: 0 10px;
-  a{
-    color: $white;
-  }
-  i{
-    vertical-align: middle;
-    font-size: 20px;
+    justify-content: space-between;
   }
 }
 
-@media screen and (max-width: 991px){
-  .navbar{
-      .container-fluid{
-          padding-right: 15px;
-          padding-left: 15px;
-      }
 
-      .navbar-collapse{
-        .input-group{
-          margin: 0;
-          margin-top: 5px;
+// Navbar brand
+//
+// Used for brand, project, or site names.
+
+.navbar-brand {
+  display: inline-block;
+  padding-top: $navbar-brand-padding-y;
+  padding-bottom: $navbar-brand-padding-y;
+  margin-right: $navbar-padding-x;
+  @include font-size($navbar-brand-font-size);
+  line-height: inherit;
+  white-space: nowrap;
+
+  @include hover-focus {
+    text-decoration: none;
+  }
+}
+
+
+// Navbar nav
+//
+// Custom navbar navigation (doesn't require `.nav`, but does make use of `.nav-link`).
+
+.navbar-nav {
+  display: flex;
+  flex-direction: column; // cannot use `inherit` to get the `.navbar`s value
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+
+  .nav-link {
+    padding-right: 0;
+    padding-left: 0;
+  }
+
+  .dropdown-menu {
+    position: static;
+    float: none;
+  }
+}
+
+
+// Navbar text
+//
+//
+
+.navbar-text {
+  display: inline-block;
+  padding-top: $nav-link-padding-y;
+  padding-bottom: $nav-link-padding-y;
+}
+
+
+// Responsive navbar
+//
+// Custom styles for responsive collapsing and toggling of navbar contents.
+// Powered by the collapse Bootstrap JavaScript plugin.
+
+// When collapsed, prevent the toggleable navbar contents from appearing in
+// the default flexbox row orientation. Requires the use of `flex-wrap: wrap`
+// on the `.navbar` parent.
+.navbar-collapse {
+  flex-basis: 100%;
+  flex-grow: 1;
+  // For always expanded or extra full navbars, ensure content aligns itself
+  // properly vertically. Can be easily overridden with flex utilities.
+  align-items: center;
+}
+
+// Button for toggling the navbar when in its collapsed state
+.navbar-toggler {
+  padding: $navbar-toggler-padding-y $navbar-toggler-padding-x;
+  @include font-size($navbar-toggler-font-size);
+  line-height: 1;
+  background-color: transparent; // remove default button style
+  border: $border-width solid transparent; // remove default button style
+  @include border-radius($navbar-toggler-border-radius);
+
+  @include hover-focus {
+    text-decoration: none;
+  }
+}
+
+// Keep as a separate element so folks can easily override it with another icon
+// or image file as needed.
+.navbar-toggler-icon {
+  display: inline-block;
+  width: 1.5em;
+  height: 1.5em;
+  vertical-align: middle;
+  content: "";
+  background: no-repeat center center;
+  background-size: 100% 100%;
+}
+
+// Generate series of `.navbar-expand-*` responsive classes for configuring
+// where your navbar collapses.
+.navbar-expand {
+  @each $breakpoint in map-keys($grid-breakpoints) {
+    $next: breakpoint-next($breakpoint, $grid-breakpoints);
+    $infix: breakpoint-infix($next, $grid-breakpoints);
+
+    &#{$infix} {
+      @include media-breakpoint-down($breakpoint) {
+        > .container,
+        > .container-fluid {
+          padding-right: 0;
+          padding-left: 0;
         }
       }
 
-      .navbar-nav{
+      @include media-breakpoint-up($next) {
+        flex-flow: row nowrap;
+        justify-content: flex-start;
 
-        .btn{
-          margin-left: -3px;
-          display: flex;
+        .navbar-nav {
+          flex-direction: row;
 
-          i {
-            margin-right: 12px;
+          .dropdown-menu {
+            position: absolute;
           }
 
-          span {
-            margin: 0;
-            text-transform: uppercase;
-            font-weight: 300;
-
-            &,
-            &:hover,
-            &:focus,
-            &:active,
-            &:active:focus {
-              color: $black !important;
-            }
+          .nav-link {
+            padding-right: $navbar-nav-link-padding-x;
+            padding-left: $navbar-nav-link-padding-x;
           }
         }
 
-          a.nav-link{
-            i{
-              opacity: 1;
-              margin-left: 4px;
-              margin-right: 5px;
-            }
-            p{
-              display: inline-block;
-              text-transform: uppercase;
-              margin-left: 7px;
-            }
-          }
+        // For nesting containers, have to redeclare for alignment purposes
+        > .container,
+        > .container-fluid {
+          flex-wrap: nowrap;
+        }
 
-          .modal-search .modal-dialog{
-            padding: 0 40px;
-          }
-          .dropdown{
-            margin: 5px 0;
-            .nav-link{
-              padding-bottom: 0;
-            }
-            .dropdown-menu{
-              .dropdown-item{
-                margin-top: 0;
-                padding-left: 24px;
-              }
-            }
-          }
-      }
+        .navbar-collapse {
+          display: flex !important; // stylelint-disable-line declaration-no-important
 
-      .dropdown.show .dropdown-menu{
-          display: block;
+          // Changes flex-bases to auto because of an IE10 bug
+          flex-basis: auto;
+        }
 
-      }
-
-      .dropdown .dropdown-menu{
+        .navbar-toggler {
           display: none;
-          li a{
-            color: $black;
-          }
+        }
       }
-
-      .dropdown.show .dropdown-menu,
-      .dropdown .dropdown-menu{
-          background-color: transparent;
-          border: 0;
-          transition: none;
-          -webkit-box-shadow: none;
-          box-shadow: none;
-          width: auto;
-          margin: 0px 1rem;
-          margin-top: 0px;
-
-          &:before{
-              display: none;
-          }
-      }
-
-      .dropdown-menu .dropdown-item:focus,
-      .dropdown-menu .dropdown-item:hover{
-          color: $white;
-      }
-
-      &.bg-white .dropdown-menu .dropdown-item:focus,
-      &.bg-white .dropdown-menu .dropdown-item:hover{
-          color: $default;
-      }
-
-      button.navbar-toggler[data-target="#navigation"]{
-        padding-top: 0;
-      }
-
-      .navbar-toggler-bar{
-          display: block;
-          position: relative;
-          width: 22px;
-          height: 1px;
-          border-radius: 1px;
-          background: $white;
-
-          &.navbar-kebab{
-            height: 4px;
-            width: 4px;
-            margin-bottom: 3px;
-            border-radius: 50%;
-          }
-
-          & + .navbar-toggler-bar{
-              margin-top: 7px;
-          }
-
-          & + .navbar-toggler-bar.navbar-kebab{
-              margin-top: 0px;
-          }
-
-          &.bar2{
-              width: 17px;
-              transition: width .2s linear;
-          }
-      }
-
-      &.bg-white:not(.navbar-transparent) .navbar-toggler-bar{
-          background-color: $default;
-      }
-
-      & .toggled .navbar-toggler-bar{
-          width: 24px;
-
-          & + .navbar-toggler-bar{
-              margin-top: 5px;
-          }
-      }
-
-      .navbar-brand{
-        margin-left: 20px;
-        position: relative;
-      }
+    }
   }
-
-  .navbar-nav{
-      .nav-link{
-          i.fa,
-          i.tim-icons{
-              opacity: .5;
-          }
-      }
-  }
-
-  .bar1,
-  .bar2,
-  .bar3 {
-    outline: 1px solid transparent;
-  }
-  .bar1 {
-    top: 0px;
-    @include bar-animation($topbar-back);
-  }
-  .bar2 {
-    opacity: 1;
-  }
-  .bar3 {
-    bottom: 0px;
-    @include bar-animation($bottombar-back);
-  }
-  .toggled .bar1 {
-    top: 6px;
-    @include bar-animation($topbar-x);
-  }
-  .toggled .bar2 {
-    opacity: 0;
-  }
-  .toggled .bar3 {
-    bottom: 6px;
-    @include bar-animation($bottombar-x);
-  }
-
-  @include topbar-x-rotation();
-  @include topbar-back-rotation();
-  @include bottombar-x-rotation();
-  @include bottombar-back-rotation();
-
-  @-webkit-keyframes fadeIn {
-    0% {opacity: 0;}
-    100% {opacity: 1;}
-  }
-  @-moz-keyframes fadeIn {
-    0% {opacity: 0;}
-    100% {opacity: 1;}
-  }
-  @keyframes fadeIn {
-    0% {opacity: 0;}
-    100% {opacity: 1;}
-  }
-
 }
 
-@media screen and (min-width: 992px) {
-  .navbar-collapse {
-    background: none !important;
-  }
 
-  .navbar .navbar-toggle {
-    display: none;
+// Navbar themes
+//
+// Styles for switching between navbars with light or dark background.
+
+// Dark links against a light background
+.navbar-light {
+  .navbar-brand {
+    color: $navbar-light-brand-color;
+
+    @include hover-focus {
+      color: $navbar-light-brand-hover-color;
+    }
   }
 
   .navbar-nav {
     .nav-link {
-      &.profile-photo {
-        padding: 0;
-        margin: 7px $padding-base-horizontal;
+      color: $navbar-light-color;
+
+      @include hover-focus {
+        color: $navbar-light-hover-color;
+      }
+
+      &.disabled {
+        color: $navbar-light-disabled-color;
+      }
+    }
+
+    .show > .nav-link,
+    .active > .nav-link,
+    .nav-link.show,
+    .nav-link.active {
+      color: $navbar-light-active-color;
+    }
+  }
+
+  .navbar-toggler {
+    color: $navbar-light-color;
+    border-color: $navbar-light-toggler-border-color;
+  }
+
+  .navbar-toggler-icon {
+    background-image: $navbar-light-toggler-icon-bg;
+  }
+
+  .navbar-text {
+    color: $navbar-light-color;
+    a {
+      color: $navbar-light-active-color;
+
+      @include hover-focus {
+        color: $navbar-light-active-color;
       }
     }
   }
-
-  .navbar {
-    .caret {
-      position: absolute;
-      left: 80%;
-      top: 55%;
-      margin-left: 0;
-    }
-  }
-    .navbar-expand-lg .navbar-nav .nav-link {
-      padding-right: 0.5rem;
-      padding-left: 0.5rem;
-  }
 }
 
-@media screen and (max-width: 576px){
-  .navbar[class*='navbar-toggleable-'] .container{
-      margin-left: 0;
-      margin-right: 0;
+// White links against a dark background
+.navbar-dark {
+  .navbar-brand {
+    color: $navbar-dark-brand-color;
+
+    @include hover-focus {
+      color: $navbar-dark-brand-hover-color;
+    }
+  }
+
+  .navbar-nav {
+    .nav-link {
+      color: $navbar-dark-color;
+
+      @include hover-focus {
+        color: $navbar-dark-hover-color;
+      }
+
+      &.disabled {
+        color: $navbar-dark-disabled-color;
+      }
+    }
+
+    .show > .nav-link,
+    .active > .nav-link,
+    .nav-link.show,
+    .nav-link.active {
+      color: $navbar-dark-active-color;
+    }
+  }
+
+  .navbar-toggler {
+    color: $navbar-dark-color;
+    border-color: $navbar-dark-toggler-border-color;
+  }
+
+  .navbar-toggler-icon {
+    background-image: $navbar-dark-toggler-icon-bg;
+  }
+
+  .navbar-text {
+    color: $navbar-dark-color;
+    a {
+      color: $navbar-dark-active-color;
+
+      @include hover-focus {
+        color: $navbar-dark-active-color;
+      }
+    }
   }
 }
