--- a/_dropdown.scss
+++ b/_dropdown.scss
@@ -1,359 +1,191 @@
+// The dropdown wrapper (`<div>`)
+.dropup,
+.dropright,
+.dropdown,
+.dropleft {
+  position: relative;
+}
+
+.dropdown-toggle {
+  white-space: nowrap;
+
+  // Generate the caret automatically
+  @include caret;
+}
+
+// The dropdown menu
 .dropdown-menu {
-    border: 0;
-    box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.2);
-    border-radius: $border-radius-xs;
-    @include transitions($fast-transition-time, $transition-linear);
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: $zindex-dropdown;
+  display: none; // none by default, but block on "open" of the menu
+  float: left;
+  min-width: $dropdown-min-width;
+  padding: $dropdown-padding-y 0;
+  margin: $dropdown-spacer 0 0; // override default ul
+  @include font-size($dropdown-font-size);
+  color: $dropdown-color;
+  text-align: left; // Ensures proper alignment if parent has it changed (e.g., modal footer)
+  list-style: none;
+  background-color: $dropdown-bg;
+  background-clip: padding-box;
+  border: $dropdown-border-width solid $dropdown-border-color;
+  @include border-radius($dropdown-border-radius);
+  @include box-shadow($dropdown-box-shadow);
+}
 
-    &.dropdown-menu-right {
-      &:before, &:after {
-        left:auto;
-        right: 10px;
-      }
-    }
+@each $breakpoint in map-keys($grid-breakpoints) {
+  @include media-breakpoint-up($breakpoint) {
+    $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
 
-    &.dropdown-black {
-      background: linear-gradient(to bottom, $black 0%, $black-states 100%);
-      border: 1px solid $default;
-      .dropdown-item {
-        color: rgba(255, 255, 255, 0.7);
-      }
-
-      .dropdown-divider {
-        border-color: $default;
-      }
-
-      &:before {
-        color: $black;
-        z-index: 2;
-      }
-
-      &:after {
-        display: inline-block;
-        position: absolute;
-        width: 0;
-        height: 0;
-        z-index: 1;
-        vertical-align: middle;
-        content: "";
-        top: -6px;
-        left: 10px;
-        right: auto;
-        color: $default;
-        border-bottom: .4em solid;
-        border-right: .4em solid transparent;
-        border-left: .4em solid transparent;
-      }
-
-      &.dropdown-menu-right {
-        &:after {
-          left: auto;
-          right: 10px;
-        }
-      }
-
-      .dropup & {
-        &:after {
-          color: $black-states;
-          z-index: 2;
-        }
-
-        &:before {
-          display: inline-block;
-          position: absolute;
-          width: 0;
-          height: 0;
-          vertical-align: middle;
-          content: "";
-          top: auto;
-          bottom: -6px;
-          right: auto;
-          left: 10px;
-          color: $dark-background;
-          border-top: .4em solid;
-          border-right: .4em solid transparent;
-          border-left: .4em solid transparent;
-          border-bottom: none;
-          z-index: 1;
-        }
-      }
-    }
-
-    i {
-        margin-right: 5px;
-        position: relative;
-        top: 1px;
-    }
-
-    .tim-icons {
-        margin-right: 10px;
-        position: relative;
-        top: 4px;
-        font-size: 18px;
-        margin-top: -5px;
-        opacity: .5;
-    }
-
-    .dropdown-item {
-        &.active,
-        &:active{
-            color: inherit;
-        }
-    }
-
-    .dropup & {
-        &:before {
-            display: none;
-        }
-
-        &:after {
-          display: inline-block;
-          position: absolute;
-          width: 0;
-          height: 0;
-          vertical-align: middle;
-          content: "";
-          top: auto;
-          bottom: -5px;
-          right: auto;
-          left: 10px;
-          color: $white;
-          border-top: .4em solid;
-          border-right: .4em solid transparent;
-          border-left: .4em solid transparent;
-          border-bottom: none;
-        }
-
-        &.dropdown-menu-right {
-          &:after, &:before {
-            right: 10px;
-            left: auto;
-          }
-        }
-    }
-
-
-
-    &:before {
-      display: inline-block;
-      position: absolute;
-      width: 0;
-      height: 0;
-      vertical-align: middle;
-      content: "";
-      top: -5px;
-      left: 10px;
+    .dropdown-menu#{$infix}-left {
       right: auto;
-      color: $white;
-      border-bottom: .4em solid;
-      border-right: .4em solid transparent;
-      border-left: .4em solid transparent;
+      left: 0;
     }
 
-
-
-    &.dropdown-menu-right {
-      right: 0 !important;
-      left: auto !important;
+    .dropdown-menu#{$infix}-right {
+      right: 0;
+      left: auto;
     }
-
-    .dropdown-item,
-    .bootstrap-select &.inner li a {
-      font-size: $font-size-sm;
-      padding-top: .6rem;
-      padding-bottom: .6rem;
-      margin-top: 5px;
-      @include transitions($fast-transition-time, $transition-linear);
-
-      &:hover,
-      &:focus {
-        background-color: $opacity-gray-3;
-      }
-
-      &.disabled,
-      &:disabled {
-        color: $default-opacity;
-
-        &:hover,
-        &:focus {
-          background-color: transparent;
-          box-shadow: none;
-        }
-      }
-    }
-
-
-    .dropdown-divider {
-        background-color: $opacity-gray-5;
-    }
-
-    .dropdown-header:not([href]):not([tabindex]) {
-        color: $default-opacity;
-        font-size: $font-size-xs;
-        text-transform: uppercase;
-        font-weight: $font-weight-bold;
-    }
-
-    &.dropdown-primary {
-        @include dropdown-colors(darken($primary, 3%),$opacity-8,$white, $opacity-2);
-    }
-
-    &.dropdown-info {
-        @include dropdown-colors(darken($info, 3%),$opacity-8,$white, $opacity-2);
-    }
-
-    &.dropdown-danger {
-        @include dropdown-colors(darken($danger, 3%),$opacity-8,$white, $opacity-2);
-    }
-
-    &.dropdown-success {
-        @include dropdown-colors(darken($success, 3%),$opacity-8,$white, $opacity-2);
-    }
-
-    &.dropdown-warning {
-        @include dropdown-colors(darken($warning, 3%),$opacity-8,$white, $opacity-2);
-    }
-
-    .dropdown &,
-    .dropup:not(.bootstrap-select) &,
-    .bootstrap-select &:not(.inner),
-    &.bootstrap-datetimepicker-widget.bottom {
-        @include transform-translate-y-dropdown(-20px);
-        visibility: hidden;
-        display: block;
-        @include opacity(0);
-        top: 100% !important;
-    }
-
-    &.bootstrap-datetimepicker-widget.top {
-      @include transform-translate-y-dropdown(-20px);
-      visibility: hidden;
-      display: block;
-      @include opacity(0);
-    }
-
-    &.bootstrap-datetimepicker-widget.top,
-    &.bootstrap-datetimepicker-widget.bottom {
-        @include transform-translate-y-dropdown(-20px);
-    }
-
-    .bootstrap-select.dropup &:not(.inner){
-        @include transform-translate-y-dropdown(25px);
-    }
-
-    .dropup:not(.bootstrap-select) &{
-        @include transform-translate-y-dropdown(20px);
-        top: auto !important;
-        bottom: 100%;
-    }
-
-    .dropdown.show &,
-    .bootstrap-select.show &:not(.inner),
-    &.bootstrap-datetimepicker-widget.top.open,
-    &.bootstrap-datetimepicker-widget.bottom.open,
-    .dropup.show:not(.bootstrap-select) &,
-    .navbar .dropdown.show &{
-        @include opacity(1);
-        visibility: visible;
-        @include transform-translate-y-dropdown(1px);
-    }
-
-    &.bootstrap-datetimepicker-widget.top.open,
-    &.bootstrap-datetimepicker-widget.bottom.open{
-        @include transform-translate-y-dropdown(0px);
-    }
-
-    .dropup.show:not(.bootstrap-select) &{
-        @include transform-translate-y-dropdown(-2px);
-    }
-
-    &.dropdown-navbar{
-      left: -80px;
-      &:before, &:after{
-        left: auto;
-        right: 17px;
-      }
-    }
-
-
+  }
 }
 
-.btn{
-    cursor: pointer;
-
-    &.dropdown-toggle[data-toggle="dropdown"]{
-        padding:10px;
-        margin: 0;
-        margin-bottom: 5px;
-
-        &:after{
-          content: "";
-          margin-left: 5px;
-        }
-
-    }
-
-    span.bs-caret{
-      display: none;
-    }
-
-    &.btn-link{
-      &.dropdown-toggle{
-        height: 22px;
-        padding: 0;
-        margin-right: 5px;
-      }
-    }
-}
-
-.dropdown-toggle:after{
-
-  content: unset;
-
-}
-
-.btn:not(:disabled):not(.disabled).active:focus,
- .btn:not(:disabled):not(.disabled):active:focus,
- .show>.btn.dropdown-toggle:focus{
-   box-shadow: none;
- }
-
-
-// Dropown: Sizes
-
-.dropdown-menu-sm {
-    min-width: 100px;
-    border: $border-radius-lg;
-}
-
-.dropdown-menu-lg {
-    min-width: 260px;
-    border-radius: $border-radius-lg;
-}
-
-.dropdown-menu-xl {
-    min-width: 450px;
-    border-radius: $border-radius-lg;
-}
-
-@media screen and (max-width: 991px){
-  .dropdown-toggle:after{
-    display: inline-block;
-    width: 0;
-    height: 0;
-    margin-left: .255em;
-    vertical-align: .255em;
-    content: "";
-    border-top: .3em solid;
-    border-right: .3em solid transparent;
-    border-bottom: 0;
-    border-left: .3em solid transparent;
+// Allow for dropdowns to go bottom up (aka, dropup-menu)
+// Just add .dropup after the standard .dropdown class and you're set.
+.dropup {
+  .dropdown-menu {
+    top: auto;
+    bottom: 100%;
+    margin-top: 0;
+    margin-bottom: $dropdown-spacer;
   }
 
+  .dropdown-toggle {
+    @include caret(up);
+  }
 }
 
-
-@media screen and (min-width: 992px){
-  .dropdown-menu .dropdown-item{
-      color: $dark-gray;
+.dropright {
+  .dropdown-menu {
+    top: 0;
+    right: auto;
+    left: 100%;
+    margin-top: 0;
+    margin-left: $dropdown-spacer;
   }
+
+  .dropdown-toggle {
+    @include caret(right);
+    &::after {
+      vertical-align: 0;
+    }
+  }
+}
+
+.dropleft {
+  .dropdown-menu {
+    top: 0;
+    right: 100%;
+    left: auto;
+    margin-top: 0;
+    margin-right: $dropdown-spacer;
+  }
+
+  .dropdown-toggle {
+    @include caret(left);
+    &::before {
+      vertical-align: 0;
+    }
+  }
+}
+
+// When enabled Popper.js, reset basic dropdown position
+// stylelint-disable-next-line no-duplicate-selectors
+.dropdown-menu {
+  &[x-placement^="top"],
+  &[x-placement^="right"],
+  &[x-placement^="bottom"],
+  &[x-placement^="left"] {
+    right: auto;
+    bottom: auto;
+  }
+}
+
+// Dividers (basically an `<hr>`) within the dropdown
+.dropdown-divider {
+  @include nav-divider($dropdown-divider-bg, $dropdown-divider-margin-y);
+}
+
+// Links, buttons, and more within the dropdown menu
+//
+// `<button>`-specific styles are denoted with `// For <button>s`
+.dropdown-item {
+  display: block;
+  width: 100%; // For `<button>`s
+  padding: $dropdown-item-padding-y $dropdown-item-padding-x;
+  clear: both;
+  font-weight: $font-weight-normal;
+  color: $dropdown-link-color;
+  text-align: inherit; // For `<button>`s
+  white-space: nowrap; // prevent links from randomly breaking onto new lines
+  background-color: transparent; // For `<button>`s
+  border: 0; // For `<button>`s
+
+  // Prevent dropdown overflow if there's no padding
+  // See https://github.com/twbs/bootstrap/pull/27703
+  @if $dropdown-padding-y == 0 {
+    &:first-child {
+      @include border-top-radius($dropdown-inner-border-radius);
+    }
+
+    &:last-child {
+      @include border-bottom-radius($dropdown-inner-border-radius);
+    }
+  }
+
+  @include hover-focus {
+    color: $dropdown-link-hover-color;
+    text-decoration: none;
+    @include gradient-bg($dropdown-link-hover-bg);
+  }
+
+  &.active,
+  &:active {
+    color: $dropdown-link-active-color;
+    text-decoration: none;
+    @include gradient-bg($dropdown-link-active-bg);
+  }
+
+  &.disabled,
+  &:disabled {
+    color: $dropdown-link-disabled-color;
+    pointer-events: none;
+    background-color: transparent;
+    // Remove CSS gradients if they're enabled
+    @if $enable-gradients {
+      background-image: none;
+    }
+  }
+}
+
+.dropdown-menu.show {
+  display: block;
+}
+
+// Dropdown section headers
+.dropdown-header {
+  display: block;
+  padding: $dropdown-padding-y $dropdown-item-padding-x;
+  margin-bottom: 0; // for use with heading elements
+  @include font-size($font-size-sm);
+  color: $dropdown-header-color;
+  white-space: nowrap; // as with > li > a
+}
+
+// Dropdown text
+.dropdown-item-text {
+  display: block;
+  padding: $dropdown-item-padding-y $dropdown-item-padding-x;
+  color: $dropdown-link-color;
 }
