--- a/_tables.scss
+++ b/_tables.scss
@@ -1,191 +1,185 @@
-.table{
-  > tbody > tr > td {
-    color: rgba(255, 255, 255, 0.7) !important;
+//
+// Basic Bootstrap table
+//
 
-    .photo {
-      height: 30px;
-      width: 30px;
-      border-radius: 50%;
-      overflow: hidden;
-      margin: 0 auto;
+.table {
+  width: 100%;
+  margin-bottom: $spacer;
+  color: $table-color;
+  background-color: $table-bg; // Reset for nesting within parents with `background-color`.
 
-      img {
-        width: 100%;
+  th,
+  td {
+    padding: $table-cell-padding;
+    vertical-align: top;
+    border-top: $table-border-width solid $table-border-color;
+  }
+
+  thead th {
+    vertical-align: bottom;
+    border-bottom: (2 * $table-border-width) solid $table-border-color;
+  }
+
+  tbody + tbody {
+    border-top: (2 * $table-border-width) solid $table-border-color;
+  }
+}
+
+
+//
+// Condensed table w/ half padding
+//
+
+.table-sm {
+  th,
+  td {
+    padding: $table-cell-padding-sm;
+  }
+}
+
+
+// Border versions
+//
+// Add or remove borders all around the table and between all the columns.
+
+.table-bordered {
+  border: $table-border-width solid $table-border-color;
+
+  th,
+  td {
+    border: $table-border-width solid $table-border-color;
+  }
+
+  thead {
+    th,
+    td {
+      border-bottom-width: 2 * $table-border-width;
+    }
+  }
+}
+
+.table-borderless {
+  th,
+  td,
+  thead th,
+  tbody + tbody {
+    border: 0;
+  }
+}
+
+// Zebra-striping
+//
+// Default zebra-stripe styles (alternating gray and transparent backgrounds)
+
+.table-striped {
+  tbody tr:nth-of-type(#{$table-striped-order}) {
+    background-color: $table-accent-bg;
+  }
+}
+
+
+// Hover effect
+//
+// Placed here since it has to come after the potential zebra striping
+
+.table-hover {
+  tbody tr {
+    @include hover {
+      color: $table-hover-color;
+      background-color: $table-hover-bg;
+    }
+  }
+}
+
+
+// Table backgrounds
+//
+// Exact selectors below required to override `.table-striped` and prevent
+// inheritance to nested tables.
+
+@each $color, $value in $theme-colors {
+  @include table-row-variant($color, theme-color-level($color, $table-bg-level), theme-color-level($color, $table-border-level));
+}
+
+@include table-row-variant(active, $table-active-bg);
+
+
+// Dark styles
+//
+// Same table markup, but inverted color scheme: dark background and light text.
+
+// stylelint-disable-next-line no-duplicate-selectors
+.table {
+  .thead-dark {
+    th {
+      color: $table-dark-color;
+      background-color: $table-dark-bg;
+      border-color: $table-dark-border-color;
+    }
+  }
+
+  .thead-light {
+    th {
+      color: $table-head-color;
+      background-color: $table-head-bg;
+      border-color: $table-border-color;
+    }
+  }
+}
+
+.table-dark {
+  color: $table-dark-color;
+  background-color: $table-dark-bg;
+
+  th,
+  td,
+  thead th {
+    border-color: $table-dark-border-color;
+  }
+
+  &.table-bordered {
+    border: 0;
+  }
+
+  &.table-striped {
+    tbody tr:nth-of-type(odd) {
+      background-color: $table-dark-accent-bg;
+    }
+  }
+
+  &.table-hover {
+    tbody tr {
+      @include hover {
+        color: $table-dark-hover-color;
+        background-color: $table-dark-hover-bg;
       }
     }
   }
+}
 
-  > tbody > tr.table-success > td{
-    background-color: darken($success,10%);
-  }
 
-  > tbody > tr.table-info > td{
-    background-color: $info;
-  }
+// Responsive tables
+//
+// Generate series of `.table-responsive-*` classes for configuring the screen
+// size of where your table will overflow.
 
-  > tbody > tr.table-primary > td{
-    background-color: $primary;
-  }
+.table-responsive {
+  @each $breakpoint in map-keys($grid-breakpoints) {
+    $next: breakpoint-next($breakpoint, $grid-breakpoints);
+    $infix: breakpoint-infix($next, $grid-breakpoints);
 
-  > tbody > tr.table-warning > td{
-    background-color: $warning;
-  }
-  > tbody > tr.table-danger > td{
-    background-color: $danger;
-  }
+    &#{$infix} {
+      @include media-breakpoint-down($breakpoint) {
+        display: block;
+        width: 100%;
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
 
-    .img-wrapper{
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      overflow: hidden;
-      margin: 0 auto;
-    }
-
-    .img-row{
-      max-width: 60px;
-      width: 60px;
-    }
-
-    .form-check{
-        margin: 0;
-        margin-top: 5px;
-
-        & label .form-check-sign::before,
-        & label .form-check-sign::after{
-            top: -17px;
-            left: 4px;
+        // Prevent double border on horizontal scroll due to use of `display: block;`
+        > .table-bordered {
+          border: 0;
         }
+      }
     }
-
-    .btn{
-        margin: 0;
-    }
-
-    small,.small{
-      font-weight: 300;
-    }
-
-    .card-tasks .card-body &{
-        margin-bottom: 0;
-
-        > thead > tr > th,
-        > tbody > tr > th,
-        > tfoot > tr > th,
-        > thead > tr > td,
-        > tbody > tr > td,
-        > tfoot > tr > td{
-            padding-top: 5px;
-            padding-bottom: 5px;
-        }
-    }
-
-   > thead > tr > th{
-       border-bottom-width: 1px;
-       font-size: 12px;
-       text-transform: uppercase;
-       font-weight: $font-weight-extra-bold;
-       border: 0;
-       color: rgba($white, 0.7);
-   }
-
-   .radio,
-   .checkbox{
-       margin-top: 0;
-       margin-bottom: 0;
-       padding: 0;
-       width: 15px;
-
-       .icons{
-           position: relative;
-       }
-
-        label{
-            &:after,
-            &:before{
-                top: -17px;
-                left: -3px;
-            }
-        }
-   }
-   > thead > tr > th,
-   > tbody > tr > th,
-   > tfoot > tr > th,
-   > thead > tr > td,
-   > tbody > tr > td,
-   > tfoot > tr > td{
-       border-color: rgba(255, 255, 255, 0.1);
-       padding: 12px 7px;
-       vertical-align: middle;
-   }
-
-   &.table-shopping tbody tr:last-child td{
-      border: none;
-   }
-
-   .th-description{
-       max-width: 150px;
-   }
-   .td-price{
-       font-size: 26px;
-       font-weight: $font-weight-light;
-       margin-top: 5px;
-       position: relative;
-       top: 4px;
-       text-align: right;
-   }
-   .td-total{
-        font-weight: $font-weight-bold;
-        font-size: $h5-font-size;
-        padding-top: 20px;
-        text-align: right;
-    }
-
-   .td-actions .btn{
-    margin: 0px;
-    }
-
-    > tbody > tr{
-        position: relative;
-    }
-
-    > tfoot > tr {
-      color: hsla(0,0%,100%,.7);
-      text-transform: uppercase;
-    }
-}
-
-.table-responsive{
-  overflow: scroll;
-  padding-bottom: 10px;
-}
-
-#tables .table-responsive{
-    margin-bottom: 30px;
-}
-
-table.tablesorter thead tr .header{
-	background-image: url("../img/bg.gif");
-  background-repeat: no-repeat;
-  background-position: center right;
-  cursor: pointer;
-}
-
-table.tablesorter thead tr .headerSortUp {
-	background-image: url("../img/asc.gif");
-}
-table.tablesorter thead tr .headerSortDown {
-	background-image: url("../img/desc.gif");
-}
-
-// datatables
-
-.dataTables_wrapper {
-  .table-striped tbody tr:nth-of-type(odd) {
-    background-color: rgba(0,0,0,.05);
-  }
-
-  .form-control-sm {
-    font-size: 10px;
   }
 }
