--- a/_type.scss
+++ b/_type.scss
@@ -1,174 +1,125 @@
-body {
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-}
+// stylelint-disable declaration-no-important, selector-list-comma-newline-after
+
+//
+// Headings
+//
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
+  margin-bottom: $headings-margin-bottom;
+  font-family: $headings-font-family;
+  font-weight: $headings-font-weight;
   line-height: $headings-line-height;
-
-}
-p{
-  font-weight: $font-weight-light;
+  color: $headings-color;
 }
 
-button,
-input,
-optgroup,
-select,
-textarea{
-    font-family: $font-family-base;
+h1, .h1 { @include font-size($h1-font-size); }
+h2, .h2 { @include font-size($h2-font-size); }
+h3, .h3 { @include font-size($h3-font-size); }
+h4, .h4 { @include font-size($h4-font-size); }
+h5, .h5 { @include font-size($h5-font-size); }
+h6, .h6 { @include font-size($h6-font-size); }
+
+.lead {
+  @include font-size($lead-font-size);
+  font-weight: $lead-font-weight;
 }
-.card{
-  h1,h2,h3,h4,h5,h6,p{
-    color: $opacity-8;
+
+// Type display classes
+.display-1 {
+  @include font-size($display1-size);
+  font-weight: $display1-weight;
+  line-height: $display-line-height;
+}
+.display-2 {
+  @include font-size($display2-size);
+  font-weight: $display2-weight;
+  line-height: $display-line-height;
+}
+.display-3 {
+  @include font-size($display3-size);
+  font-weight: $display3-weight;
+  line-height: $display-line-height;
+}
+.display-4 {
+  @include font-size($display4-size);
+  font-weight: $display4-weight;
+  line-height: $display-line-height;
+}
+
+
+//
+// Horizontal rules
+//
+
+hr {
+  margin-top: $hr-margin-y;
+  margin-bottom: $hr-margin-y;
+  border: 0;
+  border-top: $hr-border-width solid $hr-border-color;
+}
+
+
+//
+// Emphasis
+//
+
+small,
+.small {
+  @include font-size($small-font-size);
+  font-weight: $font-weight-normal;
+}
+
+mark,
+.mark {
+  padding: $mark-padding;
+  background-color: $mark-bg;
+}
+
+
+//
+// Lists
+//
+
+.list-unstyled {
+  @include list-unstyled;
+}
+
+// Inline turns list items into inline-block
+.list-inline {
+  @include list-unstyled;
+}
+.list-inline-item {
+  display: inline-block;
+
+  &:not(:last-child) {
+    margin-right: $list-inline-padding;
   }
 }
-h1,h2,h3,h4,h5,h6{
-    font-weight: $font-weight-normal;
-    color: $opacity-8;
+
+
+//
+// Misc
+//
+
+// Builds on `abbr`
+.initialism {
+  @include font-size(90%);
+  text-transform: uppercase;
 }
 
-a{
-    color: $primary-states;
-    font-weight: $font-weight-light;
-    &:hover,
-    &:focus{
-        color: $primary;
-    }
-}
-h1, .h1 {
-    line-height: 1.05;
-    margin-bottom: $margin-base-vertical * 2;
-
-    small{
-        font-weight: $font-weight-bold;
-        text-transform: uppercase;
-        opacity: .8;
-    }
-
-}
-h2, .h2{
-    margin-bottom: $margin-base-vertical * 2;
-    line-height: 1.2;
-
-}
-h3, .h3{
-    margin-bottom: $margin-base-vertical * 2;
-    line-height: 1.4em;
-}
-h4, .h4{
-    line-height: 1.45em;
-    margin-bottom: $margin-base-vertical;
-
-    & + .category,
-    &.title + .category{
-        margin-top: -10px;
-    }
-}
-h5, .h5 {
-    line-height: 1.4em;
-    margin-bottom: 15px;
-}
-h6, .h6{
-    text-transform: uppercase;
-    font-weight: $font-weight-bold;
-}
-p{
-    color: $opacity-8;
-    margin-bottom: 5px;
-
-    &.description{
-        font-size: 1.14em;
-    }
-}
-
-
-.title{
-    font-weight: $font-weight-bold;
-    &.title-up{
-        text-transform: uppercase;
-
-        a{
-            color: $black;
-            text-decoration: none;
-        }
-    }
-    & + .category{
-        margin-top: -10px;
-    }
-}
-
-.description,
-.card-description,
-.footer-big p,
-.card .footer .stats{
-    color: $dark-gray;
-    font-weight: $font-weight-light;
-}
-.category,
-.card-category{
-    text-transform: capitalize;
-    font-weight: $font-weight-normal;
-    color: rgba($white, 0.6);
-    font-size: $font-size-sm;
-}
-
-.card-category{
-    font-size: $font-size-sm;
-}
-
-.blockquote{
-    border-left: none;
-    border: 1px solid $default;
-    padding: 20px;
-    font-size: $blockquote-font-size;
-    line-height: 1.8;
-
-    small{
-        color: $default;
-        font-size: $font-size-sm;
-        text-transform: uppercase;
-    }
-
-    &.blockquote-primary{
-        border-color: $primary;
-        color: $primary;
-
-        small{
-            color: $primary;
-        }
-    }
-
-    &.blockquote-danger{
-        border-color: $danger;
-        color: $danger;
-
-        small{
-            color: $danger;
-        }
-    }
-
-    &.blockquote-white{
-        border-color: $opacity-8;
-        color: $white;
-
-        small{
-            color: $opacity-8;
-        }
-    }
-}
-
-ul li, ol li{
-  color: $white;
-}
-
-pre{
-  color: $opacity-8;
-}
-
-hr{
-  border-top: 1px solid rgba(0,0,0,0.1);
-  margin-top: $spacer;
+// Blockquotes
+.blockquote {
   margin-bottom: $spacer;
+  @include font-size($blockquote-font-size);
+}
+
+.blockquote-footer {
+  display: block;
+  @include font-size($blockquote-small-font-size);
+  color: $blockquote-small-color;
+
+  &::before {
+    content: "\2014\00A0"; // em dash, nbsp
+  }
 }
