--- a/_utilities.scss
+++ b/_utilities.scss
@@ -1,9 +1,17 @@
-@import "utilities/backgrounds.scss";
-@import "utilities/floating.scss";
-@import "utilities/helper.scss";
-@import "utilities/position.scss";
-@import "utilities/sizing.scss";
-@import "utilities/spacing.scss";
-@import "utilities/shadows.scss";
-@import "utilities/text.scss";
-@import "utilities/transform.scss";
+@import "utilities/align";
+@import "utilities/background";
+@import "utilities/borders";
+@import "utilities/clearfix";
+@import "utilities/display";
+@import "utilities/embed";
+@import "utilities/flex";
+@import "utilities/float";
+@import "utilities/overflow";
+@import "utilities/position";
+@import "utilities/screenreaders";
+@import "utilities/shadows";
+@import "utilities/sizing";
+@import "utilities/stretched-link";
+@import "utilities/spacing";
+@import "utilities/text";
+@import "utilities/visibility";
